[NEW] [*] - Improve tests coverage configuration.

--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
         "clean:types": "rimraf \"./packages/*/types\"",
         "clean:coverage": "rimraf ./.nyc_output ./coverage",
         "codistica-dev-tools": "./packages/codistica-dev-tools/lib/bin/codistica-dev-tools.js",
-        "coverage": "nyc --reporter=lcov yarn run test",
+        "coverage": "nyc yarn run test",
         "flow:copy-lib": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source --ignore scripts/**/* ./src ./lib\"",
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source --ignore scripts/**/* ./src ./lib-es\"",
         "lint": "eslint \"./packages/*/**/*.js\" --cache",
-        "prepack": "yarn uninstall && yarn install --frozen-lockfile && yarn run build && yarn run test",
+        "prepack": "yarn run uninstall && yarn install --frozen-lockfile && yarn run build && yarn run test",
         "prettify": "prettier --loglevel warn --write \"**/*.{js,json,md}\"",
         "packages:bump": "lerna version --no-push --no-changelog --no-git-tag-version",
         "packages:publish": "lerna publish from-git",
@@ -50,7 +50,7 @@
         "start:react": "yarn workspace @codistica/react run start",
         "start:react-icons": "yarn workspace @codistica/react-icons run start",
         "start:react-mui": "yarn workspace @codistica/react-mui run start",
-        "test": "mocha \"./packages/*/lib/index.test.js\"",
+        "test": "mocha \"./packages/*/lib/**/*.test.js\"",
         "test:quick": "yarn run build:lib && yarn run test",
         "tsc:core": "lerna exec --scope @codistica/core --scope @codistica/browser --scope @codistica/node \"tsc -p ./tsconfig.build.types.json\"",
         "tsc:other": "lerna exec --ignore @codistica/core --ignore @codistica/browser --ignore @codistica/node --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --ignore @codistica/react-mui --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
