--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "codistica-husky-hooks-handlers pre-commit prettify",
+            "pre-commit": "codistica-husky-hooks-handlers pre-commit prettier",
             "commit-msg": "codistica-husky-hooks-handlers commit-msg ./packages",
             "pre-push": "codistica-husky-hooks-handlers pre-push test:quick"
         }
@@ -23,7 +23,7 @@
     "scripts": {
         "babel:lib": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=false babel --root-mode upward ./src --out-dir ./lib --copy-files --source-maps\"",
         "babel:lib-es": "lerna exec --ignore @codistica/demo --parallel \"cross-env NODE_ENV=production cross-env NPM_CONFIG_ES_MODULES=true babel --root-mode upward ./src --out-dir ./lib-es --copy-files --source-maps\"",
-        "build": "yarn run clean && yarn run prettify && lerna run prebuild --parallel && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc",
+        "build": "yarn run clean && yarn run prettier && lerna run prebuild --parallel && yarn run build:dist && yarn run build:lib && yarn run build:lib-es && yarn run build:types && yarn run build:jsdoc",
         "build:dist": "exit 0",
         "build:jsdoc": "lerna exec --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --ignore @codistica/react-mui --parallel \"jsdoc -c ../../.jsdocrc.js\"",
         "build:lib": "yarn run babel:lib && yarn run flow:copy-lib",
@@ -43,20 +43,19 @@
         "flow:copy-lib-es": "lerna exec --parallel --scope @codistica/react --scope @codistica/react-icons --scope @codistica/react-mui \"flow-copy-source --ignore scripts/**/* ./src ./lib-es\"",
         "lint": "eslint \"./packages/*/**/*.js\" --cache",
         "prepack": "yarn run uninstall && yarn install --frozen-lockfile && yarn run build && yarn run test",
-        "prettify": "prettier --loglevel warn --write \"**/*.{js,json,md}\"",
+        "prettier": "prettier --loglevel warn --write \"**/*.{js,json,md}\"",
         "packages:bump": "lerna version --no-push --no-changelog --no-git-tag-version",
         "packages:publish": "lerna publish from-git",
         "start:demo": "yarn workspace @codistica/demo run start",
         "start:react": "yarn workspace @codistica/react run start",
         "start:react-icons": "yarn workspace @codistica/react-icons run start",
         "start:react-mui": "yarn workspace @codistica/react-mui run start",
-        "test": "mocha \"./packages/*/lib/**/*.test.js\"",
+        "test": "cross-env NODE_ENV=test mocha \"./packages/*/lib/**/*.test.js\"",
         "test:quick": "yarn run build:lib && yarn run test",
         "tsc:core": "lerna exec --scope @codistica/core --scope @codistica/browser --scope @codistica/node \"tsc -p ./tsconfig.build.types.json\"",
         "tsc:other": "lerna exec --ignore @codistica/core --ignore @codistica/browser --ignore @codistica/node --ignore @codistica/demo --ignore @codistica/react --ignore @codistica/react-icons --ignore @codistica/react-mui --parallel --no-bail \"tsc -p ./tsconfig.build.types.json\"",
         "uninstall": "yarn run clean && lerna clean --yes && rimraf ./node_modules"
     },
-    "dependencies": {},
     "devDependencies": {
         "@babel/cli": "^7.11.6",
         "@babel/core": "^7.11.6",
@@ -68,6 +67,7 @@
         "@codistica/eslint-config-default": "^2.0.0",
         "@codistica/husky-hooks-handlers": "^1.0.1",
         "@codistica/prettier-config-default": "^1.0.1",
+        "@testing-library/react": "^12.1.5",
         "@types/chai": "^4.2.12",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.14.8",
@@ -86,9 +86,11 @@
         "eslint-plugin-react-hooks": "^4.1.2",
         "flow-bin": "^0.133.0",
         "flow-copy-source": "^2.0.9",
+        "global-jsdom": "^8.5.0",
         "husky": "^4.3.0",
         "jsdoc": "^3.6.5",
         "jsdoc-babel": "^0.5.0",
+        "jsdom": "^20.0.0",
         "lerna": "^3.22.1",
         "mocha": "^8.1.3",
         "nyc": "^15.1.0",
