--- a/packages/codistica-react/package.json
+++ b/packages/codistica-react/package.json
@@ -30,7 +30,7 @@
         "lib-es",
         "!**/*.test.js",
         "!**/*.test.js.map",
-        "!*/test-utils"
+        "!**/test-utils"
     ],
     "repository": {
         "type": "git",
@@ -67,6 +67,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.11.6",
+        "@codistica/node": "^1.0.0-beta.6",
         "@storybook/addon-backgrounds": "^6.0.21",
         "@storybook/addon-centered": "^5.3.21",
         "@storybook/react": "^6.0.21",
